<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".MenuDuJeu">

    <ImageView
            android:id="@+id/logoImage_LLogin"
            android:layout_width="214dp"
            android:layout_height="176dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logo_du_jeu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" 
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp" 
            app:layout_constraintHorizontal_bias="0.497"/>

    <TextView
            android:id="@+id/appTitle_LLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_master"
            android:textSize="26sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@id/logoImage_LLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

    <EditText
            android:id="@+id/inputUsername_LLogin"
            android:layout_width="346dp"
            android:layout_height="62dp"
            android:autofillHints="" 
            android:hint="@string/prenom"
            android:textColor="@android:color/black"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:background="@android:drawable/edit_text"
            app:layout_constraintTop_toBottomOf="@id/appTitle_LLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" 
            app:layout_constraintHorizontal_bias="0.489"/>

    <EditText
            android:id="@+id/inputCode_LLogin"
            android:layout_width="340dp"
            android:layout_height="64dp"
            android:autofillHints="" 
            android:hint="@string/code_4_chiffres"
            android:textColor="@android:color/black"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:padding="12dp"
            android:background="@android:drawable/edit_text"
            app:layout_constraintTop_toBottomOf="@id/inputUsername_LLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" 
            app:layout_constraintHorizontal_bias="0.49"/>

    <TextView
            android:id="@+id/firebaseNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Utilise Firebase pour l'authentification"
            android:textStyle="italic"
            android:textColor="#000000"
            android:textSize="16sp"
            android:background="#F0F0F0"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/inputCode_LLogin"
            app:layout_constraintStart_toStartOf="@id/inputCode_LLogin"
            app:layout_constraintEnd_toEndOf="@id/inputCode_LLogin"
            android:layout_marginTop="8dp"/>

    <Button
            android:id="@+id/btnLogin_LLogin"
            android:layout_width="342dp"
            android:layout_height="50dp"
            android:text="@string/connexion"
            app:layout_constraintTop_toBottomOf="@id/firebaseNote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

    <Button
            android:id="@+id/btnRegister_LLogin"
            android:layout_width="337dp"
            android:layout_height="49dp"
            android:text="@string/creer_un_compte"
            app:layout_constraintTop_toBottomOf="@id/btnLogin_LLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>